Refactor VNPay callback to send HTML redirects
Refactored VNPay callback handling to return HTML for redirects instead of using RedirectView. Added a method to send HTML with JavaScript redirect.